Backport 2.1.1 to 1.16.5